# SovereignAI-Platform

./: .gitignore  README.md  pyproject.toml  test.py
benchmarks/: benchmark_openvino.py
data/artifacts/: manifest.json
data/processed/: canonical_corpus.jsonl
data/sources/: source_inventory.yaml
data/synthetic/: instruction_dataset.jsonl
evaluation/: __init__.py  benchmark_runner.py  benchmark_schema.py  benchmark_validator.py  code_evaluator.py  compare_models.py  config.py  evaluator.py  hallucination.py  inference.py  judge.py  leaderboard.py  llm_judge.py  loader.py  metrics.py  pipeline.py  plugin_manager.py  report.py  run_full_benchmark.py  run_smoke_test.py  statistical_analysis.py  utils.py  visualization.py
evaluation/backends/: __init__.py  base.py  ollama_backend.py
evaluation/benchmarks/: quantum_benchmark_dev.json  quantum_benchmark_v1.json
evaluation/config/: generation.py
evaluation/latency/: base_latency.json  comparison.json  latency_runner.py  prompt_template.py  warmup.py
evaluation/metrics/: __init__.py  base.py  bertscore.py  bleu.py  evaluator.py  exact_match.py  keyword_score.py  latency.py  registry.py  rouge.py
evaluation/plugins/: base.py  coding.py  hallucination.py  quantum.py  reasoning.py  regression.py
evaluation/reports/: charts.py  markdown.py  pdf_generator.py  report_generator.py  templates.py
evaluation/results/: comparison.json
scripts/: build_cannonical_dataset.py  build_canonical.py  collect_quantum_data.py  create_dev_benchmark.py  discover_documents.py  generate_synthetic_dataset.py  validate_corpus.py
(+83 files in other folders)
