[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ai-platform"
version = "0.1.0"
description = "Enterprise Sovereign AI Platform"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "markdown>=3.6",
    "pymupdf>=1.26",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "isort>=5.13",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]