[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ai-platform"
version = "0.1.0"
description = "Enterprise Sovereign AI Platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12",
    "markdown>=3.6",
    "PyMuPDF>=1.24",
    "lxml>=5.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sovereign*"]